--- a/.github/workflows/update-terraform-lockfile.yml
+++ b/.github/workflows/update-terraform-lockfile.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           terraform_version: 1.1.4
           terraform_wrapper: false
-      - uses: champ-oss/update-terraform-lockfile@e9d76db17ee9e148d4d13658ca12e6930dd81094
+      - uses: champ-oss/update-terraform-lockfile@v1.0.0-53a87c6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
