--- a/.github/workflows/gotest.yml
+++ b/.github/workflows/gotest.yml
@@ -5,6 +5,11 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+permissions:
+  pull-requests: write
+  statuses: write
+  checks: write
+
 jobs:
   gotest:
     runs-on: ubuntu-latest
