--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,3 +1,5 @@
+name: sync
+
 on:
   workflow_dispatch:
   schedule:
@@ -11,7 +13,7 @@ jobs:
         with:
           token: ${{ secrets.ACTION_TOKEN }}
 
-      - uses: champ-oss/file-sync@v1.0.51-cb02b8b
+      - uses: champ-oss/file-sync@v1.0.41-5e961bb
         with:
           token: ${{ secrets.ACTION_TOKEN }}
           repo: champ-oss/terraform-module-template
@@ -20,4 +22,7 @@ jobs:
             LICENSE
             .tflint.hcl
             .github/CODEOWNERS
+            .github/dependabot.yml
+            .github/workflows/lint.yml
             .github/workflows/release.yml
+            examples/complete/.terraform.lock.hcl=.terraform.lock.hcl
