--- a/.github/workflows/gotest.yml
+++ b/.github/workflows/gotest.yml
@@ -8,6 +8,10 @@ env:
 jobs:
   gotest:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+      pull-requests: write
     steps:
     - uses: actions/checkout@v4
       with:
