add workflow permissions

--- a/.github/workflows/gotest.yml
+++ b/.github/workflows/gotest.yml
@@ -10,8 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read
+      contents: write
       pull-requests: write
+      actions: read
+      checks: write
     steps:
     - uses: actions/checkout@v4
       with:
